# ocr-parser

./: .gitignore  README.md  pyproject.toml
src/: cli.py
src/parser/: extractors.py  normalize.py  pipeline.py  schema.py  validate.py
tests/: test_samples.py
